--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
       <section>
         <h3>Cloudprint packaging for Debian.</h3>
 
-<p>This repository contains packing files for incorporating cloudprint into Debian and derivatives.</p>
+<p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives.</p>
+<h3>Documentation</h3>
+<ul>
+<li><a href="xxx">cloudprint-service man page</a></li>
+<li><a href="xxx">cloudprint man page</a></li>
+</ul>
+<h3>Download</h3>
+<ul>
+<li><a href="cloudprint_0.10-1_all.deb">cloudprint_0.10-1_all.deb</a></li>
+<li><a href="cloudprint-service_0.10-1_all.deb">cloudprint-service_0.10-1_all.deb</a></li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/davesteele">davesteele</a></p>
