ppa.html link fix.

--- a/ppa.html
+++ b/ppa.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-      <a href="/">back</a>
+      <a href="index.html">back</a>
         <h3>Using the cloudprint-debian repository.</h3>
 Here is how to add cloudprint to apt repository resources for your system, letting you install and
 automatically upgrade with standard tools.
