--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <ul>
 <li><a href="cloudprint_0.10-5_all.deb">cloudprint_0.10-5_all.deb</a></li>
 <li><a href="cloudprint-service_0.10-5_all.deb">cloudprint-service_0.10-5_all.deb</a></li>
+<li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 </ul>
       </section>
       <footer>
