Add Google+ publisher link to the main web page.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>Cloudprint-debian</h1>
         <p>Debian packaging for the Python cloudprint proxy utility</p>
+        <p><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></p>
 
         <p class="view"><a href="https://github.com/davesteele/cloudprint-debian">View the Project on GitHub <small>davesteele/cloudprint-debian</small></a></p>
 
