Add Support/Feedback section to the index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <header>
         <h1>Cloudprint-debian</h1>
         <p>Debian packaging for the Python cloudprint proxy utility</p>
-        <p><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></p>
 
         <p class="view"><a href="https://github.com/davesteele/cloudprint-debian">View the Project on GitHub <small>davesteele/cloudprint-debian</small></a></p>
 
@@ -43,6 +42,11 @@
 <li><a href="cloudprint-service_0.10-6_all.deb">cloudprint-service_0.10-6_all.deb</a></li>
 <li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 </ul>
+<h3>Support/Feedback</h3>
+<ul>
+<li><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></li>
+<li><a href="https://github.com/davesteele/cloudprint-debian/issues" >Issues</a></p></li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/davesteele">davesteele</a></p>
@@ -50,6 +54,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
