Add Google+ badge to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <p class="view"><a href="https://github.com/davesteele/cloudprint-debian">View the Project on GitHub <small>davesteele/cloudprint-debian</small></a></p>
 
+<div class="g-page" data-width="275" data-href="//plus.google.com/114224856151152598318" data-layout="landscape" data-rel="publisher"></div>
 
         <ul>
           <li><a href="https://github.com/davesteele/cloudprint-debian/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -55,5 +56,12 @@
     </div>
     <script src="javascripts/scale.fix.js"></script>
 
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
   </body>
 </html>
