--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html itemscope itemtype="http://schema.org/Product">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -11,6 +11,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <meta itemprop="name" content="Google Cloud Print Proxy">
+    <meta itemprop="description" content="Use your Linux computer to make your printers available from Google Cloud Print">
+    <meta itemprop="image" content="http://davesteele.github.io/cloudprint-debian/cloudprint-debian.jpg">
+
   </head>
   <body>
     <div class="wrapper">
