Add G+ share link to index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <ul>
 <li><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></li>
 <li><a href="https://github.com/davesteele/cloudprint-debian/issues" >Issues</a></p></li>
+<div class="g-plus" data-action="share"></div>
 </ul>
       </section>
       <footer>
