Change web pages to reflect project name change
From Cloudprint-debian to Cloudprint-service.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cloudprint-debian by davesteele</title>
+    <title>Cloudprint-service by davesteele</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -14,23 +14,23 @@
 
     <meta itemprop="name" content="Google Cloud Print Proxy">
     <meta itemprop="description" content="Use your Linux computer to make your printers available from Google Cloud Print">
-    <meta itemprop="image" content="http://davesteele.github.io/cloudprint-debian/cloudprint-debian.jpg">
+    <meta itemprop="image" content="http://davesteele.github.io/cloudprint-service/cloudprint-debian.jpg">
 
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Cloudprint-debian</h1>
+        <h1>Cloudprint-service</h1>
         <p>Debian packaging for the Python cloudprint proxy utility</p>
 
-        <p class="view"><a href="https://github.com/davesteele/cloudprint-debian">View the Project on GitHub <small>davesteele/cloudprint-debian</small></a></p>
+        <p class="view"><a href="https://github.com/davesteele/cloudprint-service">View the Project on GitHub <small>davesteele/cloudprint-service</small></a></p>
 
 <div class="g-page" data-width="275" data-href="//plus.google.com/114224856151152598318" data-layout="landscape" data-rel="publisher"></div>
 
         <ul>
-          <li><a href="https://github.com/davesteele/cloudprint-debian/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/davesteele/cloudprint-debian/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/davesteele/cloudprint-debian">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -51,7 +51,7 @@
 <h3>Support/Feedback</h3>
 <ul>
 <li><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></li>
-<li><a href="https://github.com/davesteele/cloudprint-debian/issues" >Issues</a></p></li>
+<li><a href="https://github.com/davesteele/cloudprint-service/issues" >Issues</a></p></li>
 <div class="g-plus" data-action="share"></div>
 </ul>
       </section>
