--- a/ppa.html
+++ b/ppa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cloudprint-debian PPA Repository</title>
+    <title>Cloudprint-service PPA Repository</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,27 +15,27 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Cloudprint-debian</h1>
+        <h1>Cloudprint-service</h1>
         <p>Debian packaging for the Python cloudprint proxy utility</p>
 
-        <p class="view"><a href="https://github.com/davesteele/cloudprint-debian">View the Project on GitHub <small>davesteele/cloudprint-debian</small></a></p>
+        <p class="view"><a href="https://github.com/davesteele/cloudprint-service">View the Project on GitHub <small>davesteele/cloudprint-service</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/davesteele/cloudprint-debian/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/davesteele/cloudprint-debian/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/davesteele/cloudprint-debian">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/davesteele/cloudprint-service">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
       <a href="index.html">back</a>
-        <h3>Using the cloudprint-debian repository.</h3>
+        <h3>Using the cloudprint-service repository.</h3>
 Here is how to add cloudprint to apt repository resources for your system, letting you install and
 automatically upgrade with standard tools.
 <br><br>
 First, add a reference to the cloudprint <a href="http://en.wikipedia.org/wiki/Personal_Package_Archive">PPA</a> to your /etc/apt/sources.list file (as root):<br><br>
 <pre>
-deb http://davesteele.github.io/cloudprint-debian/repo &lt;dist&gt; main
+deb http://davesteele.github.io/cloudprint-service/repo &lt;dist&gt; main
 </pre>
 ... where &lt;dist&gt; is replaced with the appropriate value from this list:<br><br>
 <ul>
