Move the man pages to the man directory

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives.</p>
 <h3>Documentation</h3>
 <ul>
-<li><a href="cloudprint-service.8.html">cloudprint-service man page</a></li>
-<li><a href="cloudprint.1.html">cloudprint man page</a></li>
+<li><a href="man/cloudprint-service.8.html">cloudprint-service man page</a></li>
+<li><a href="man/cloudprint.1.html">cloudprint man page</a></li>
 </ul>
 <h3>Download</h3>
 <ul>
