Update web page for 0.10-9

--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.2 -->
-<!-- CreationDate: Fri Dec 20 00:44:15 2013 -->
+<!-- CreationDate: Sun Dec 22 12:16:56 2013 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -23,6 +23,7 @@
 <a href="#NAME">NAME</a><br>
 <a href="#SYNOPSIS">SYNOPSIS</a><br>
 <a href="#DESCRIPTION">DESCRIPTION</a><br>
+<a href="#BUGS">BUGS</a><br>
 <a href="#SEE ALSO">SEE ALSO</a><br>
 
 <hr>
@@ -102,13 +103,24 @@ service. Printers can be shared from that account to others
 via the printer management page at
 <i>https://www.google.com/cloudprint?#printers</i></p>
 
+<h2>BUGS
+<a name="BUGS"></a>
+</h2>
+
+
+<p style="margin-left:11%; margin-top: 1em">There have been
+instances where print job notifications don&rsquo;t work,
+causing long delays before jobs start. Uncomment the
+&rsquo;FAST_POLL&rsquo; line in
+<i>/etc/default/cloudprintd</i> to invoke.</p>
+
 <h2>SEE ALSO
 <a name="SEE ALSO"></a>
 </h2>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><i><b>cloudprint</b></i>(1)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint</b>(1)</p>
 <hr>
 </body>
 </html>
