--- a/man/cloudprint.html
+++ b/man/cloudprint.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.2 -->
-<!-- CreationDate: Fri Dec 20 00:44:15 2013 -->
+<!-- CreationDate: Sun Dec 22 12:16:55 2013 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -100,12 +100,33 @@ not public.</p>
 
 <p><b>&minus;c</b></p></td>
 <td width="8%"></td>
-<td width="73%">
+<td width="78%">
 
 
-<p>establish credentials to the service, then exit.</p></td>
-<td width="5%">
-</td></tr>
+<p>establish credentials to the service, then exit.</p></td></tr>
+<tr valign="top" align="left">
+<td width="11%"></td>
+<td width="3%">
+
+
+<p><b>&minus;u</b></p></td>
+<td width="8%"></td>
+<td width="78%">
+
+
+<p>store username/password in addition to login token to
+avoid authentication expiration.</p></td></tr>
+<tr valign="top" align="left">
+<td width="11%"></td>
+<td width="3%">
+
+
+<p><b>&minus;f</b></p></td>
+<td width="8%"></td>
+<td width="78%">
+
+
+<p>fast poll, if notifications aren&rsquo;t working.</p></td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
 <td width="3%">
@@ -113,12 +134,10 @@ not public.</p>
 
 <p><b>&minus;h</b></p></td>
 <td width="8%"></td>
-<td width="73%">
+<td width="78%">
 
 
-<p>display help</p></td>
-<td width="5%">
-</td></tr>
+<p>display help</p></td></tr>
 </table>
 
 
