Add the changelog to the Documentation list

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <ul>
 <li><a href="man/cloudprint-service.html">cloudprint-service man page</a> (<a href="man/cloudprint-service.pdf">pdf</a>)</li>
 <li><a href="man/cloudprint.html">cloudprint man page</a> (<a href="man/cloudprint.pdf">pdf</a>)</li>
+<li><a href="https://raw.github.com/davesteele/cloudprint-service/develop/debian/changelog">cloudprint-service changelog</a></li>
 </ul>
 <h3>Download</h3>
 <ul>
