--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="javascripts/jquery-1.7.1.min.js"></script>
+    <script src="javascripts/jquery.mustache.js"></script>
+    <script src="javascripts/mustache.js"></script>
 
     <meta itemprop="name" content="Google Cloud Print Proxy">
     <meta itemprop="description" content="Use your Linux computer to make your printers available from Google Cloud Print">
     <meta itemprop="image" content="http://davesteele.github.io/cloudprint-service/cloudprint-debian.jpg">
 
+    <script type="text/javascript">
+
+    function dotemplate(data, textstatus, jqXHR ) {
+        $.Mustache.addFromDom('debtmpl');
+        $('#deblist').mustache('debtmpl', data);
+    }
+
+    $(document).ready(function() {
+        $.getJSON('pkgs.json', dotemplate);
+    })
+
+    </script>
   </head>
   <body>
     <div class="wrapper">
@@ -45,8 +60,12 @@
 </ul>
 <h3>Download</h3>
 <ul>
-<li><a href="deb/cloudprint_0.10-9_all.deb">cloudprint_0.10-9_all.deb</a></li>
-<li><a href="deb/cloudprint-service_0.10-9_all.deb">cloudprint-service_0.10-9_all.deb</a></li>
+<div id="debtmpl" style="display: none;">
+{{#latest_pkgs}}
+<li><a href="deb/{{.}}">{{.}}</a></li>
+{{/latest_pkgs}}
+</div>
+<div id="deblist"></div>
 <li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 </ul>
 <h3>Support/Feedback</h3>
