Add package archive page to web

--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html itemscope itemtype="http://schema.org/Product">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cloudprint-service by davesteele</title>
+    <title>Cloudprint-service Archive</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -14,10 +14,6 @@
     <script src="javascripts/jquery-1.7.1.min.js"></script>
     <script src="javascripts/jquery.mustache.js"></script>
     <script src="javascripts/mustache.js"></script>
-
-    <meta itemprop="name" content="Google Cloud Print Proxy">
-    <meta itemprop="description" content="Use your Linux computer to make your printers available from Google Cloud Print">
-    <meta itemprop="image" content="http://davesteele.github.io/cloudprint-service/cloudprint-debian.jpg">
 
     <script type="text/javascript">
 
@@ -31,6 +27,7 @@
     })
 
     </script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -40,7 +37,6 @@
 
         <p class="view"><a href="https://github.com/davesteele/cloudprint-service">View the Project on GitHub <small>davesteele/cloudprint-service</small></a></p>
 
-<div class="g-page" data-width="275" data-href="//plus.google.com/114224856151152598318" data-layout="landscape" data-rel="publisher"></div>
 
         <ul>
           <li><a href="https://github.com/davesteele/cloudprint-service/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -49,32 +45,19 @@
         </ul>
       </header>
       <section>
-        <h3>Cloudprint packaging for Debian.</h3>
-
-<p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives.</p>
-<h3>Documentation</h3>
-<ul>
-<li><a href="man/cloudprint-service.html">cloudprint-service man page</a> (<a href="man/cloudprint-service.pdf">pdf</a>)</li>
-<li><a href="man/cloudprint.html">cloudprint man page</a> (<a href="man/cloudprint.pdf">pdf</a>)</li>
-<li><a href="https://raw.github.com/davesteele/cloudprint-service/develop/debian/changelog">cloudprint-service changelog</a></li>
-</ul>
-<h3>Download</h3>
+      <a href="index.html">back</a>
+        <h3>Archived packages.</h3>
 <ul>
 <div id="debtmpl" style="display: none;">
-{{#latest_pkgs}}
+{{#all_pkgs}}
 <li><a href="deb/{{.}}">{{.}}</a></li>
-{{/latest_pkgs}}
+{{/all_pkgs}}
 </div>
 <div id="deblist"></div>
-<li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
-<li><a href="archive.html">Package Archive</a></li>
+<li><a href="deb/checksums.txt">checksums.txt</a></li>
 </ul>
-<h3>Support/Feedback</h3>
-<ul>
-<li><a href="https://plus.google.com/114224856151152598318" rel="publisher">Google+</a></li>
-<li><a href="https://github.com/davesteele/cloudprint-service/issues" >Issues</a></p></li>
-<div class="g-plus" data-action="share"></div>
-</ul>
+
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/davesteele">davesteele</a></p>
@@ -83,12 +66,5 @@
     </div>
     <script src="javascripts/scale.fix.js"></script>
 
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
   </body>
 </html>
