--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <h3>Cloudprint packaging for Debian.</h3>
 
 <p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives.</p>
+<p>It provides a proxy service that makes locally-deﬁned CUPS printers available for use by approved Google users, both locally and remotely.<p>
+
 <h3>Documentation</h3>
 <ul>
 <li><a href="man/cloudprint-service.html">cloudprint-service man page</a> (<a href="man/cloudprint-service.pdf">pdf</a>)</li>
