--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section>
         <h3>Cloudprint packaging for Debian.</h3>
 
-<p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives.</p>
+<p>This repository contains packing files for incorporating <a href="https://github.com/armooo/cloudprint">cloudprint</a> into Debian and derivatives. A number of bug fixes and enhancements are included.</p>
 <p>It provides a proxy service that makes locally-deﬁned CUPS printers available for use by approved Google users, both locally and remotely.<p>
 
 <h3>Documentation</h3>
