--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </ul>
 <h3>Download</h3>
 <ul>
-<div id="debtmpl" style="display: none;">
+<script type='text/template' id="debtmpl">
 {{#latest_pkgs}}
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_pkgs}}
