--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 {{#latest_pkgs}}
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_pkgs}}
-</div>
+</script>
 <div id="deblist"></div>
 <li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 <li><a href="archive.html">Package Archive</a></li>
