Add authorship to index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/davesteele">davesteele</a></p>
+        <p>This project is maintained by <a href="https://plus.google.com/100462058146704694561?rel=author">David Steele</a> (<a href="https://github.com/davesteele">davesteele</a>)</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
