update the web site for 0.11-3.1

--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.2 -->
-<!-- CreationDate: Thu Jan  9 20:01:19 2014 -->
+<!-- CreationDate: Sat Feb  8 23:55:01 2014 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -23,7 +23,7 @@
 <a href="#NAME">NAME</a><br>
 <a href="#SYNOPSIS">SYNOPSIS</a><br>
 <a href="#DESCRIPTION">DESCRIPTION</a><br>
-<a href="#BUGS">BUGS</a><br>
+<a href="#FILES">FILES</a><br>
 <a href="#SEE ALSO">SEE ALSO</a><br>
 
 <hr>
@@ -103,16 +103,17 @@ service. Printers can be shared from that account to others
 via the printer management page at
 <i>https://www.google.com/cloudprint?#printers</i></p>
 
-<h2>BUGS
-<a name="BUGS"></a>
+<h2>FILES
+<a name="FILES"></a>
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em">There have been
-instances where print job notifications don&rsquo;t work,
-causing long delays before jobs start. Uncomment the
-&rsquo;FAST_POLL&rsquo; line in
-<i>/etc/default/cloudprintd</i> to invoke.</p>
+
+<p style="margin-left:11%; margin-top: 1em"><i>/etc/default/cloudprintd</i></p>
+
+<p style="margin-left:22%;">This file contains a number of
+parameters that control cloudprint. View the file for more
+details.</p>
 
 <h2>SEE ALSO
 <a name="SEE ALSO"></a>
