Add 0.11-5.1 to the PPA
Along with -4 and -5.

--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.2 -->
-<!-- CreationDate: Sat Feb  8 23:55:01 2014 -->
+<!-- CreationDate: Sun May 11 23:44:19 2014 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -121,7 +121,7 @@ details.</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint</b>(1)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8)</p>
 <hr>
 </body>
 </html>
