--- a/man/cloudprint.html
+++ b/man/cloudprint.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.2 -->
-<!-- CreationDate: Sat Feb  8 23:55:01 2014 -->
+<!-- CreationDate: Sun May 11 23:44:18 2014 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -61,6 +61,10 @@ devices, or Android devices.</p>
 <p style="margin-left:11%; margin-top: 1em">This is a
 lower-level command. Cloud Print services would normally be
 managed through the cloudprint service.</p>
+
+<p style="margin-left:11%; margin-top: 1em">The cloudprint
+utility is linked as cloudprintd for the cloudprint-service
+package.</p>
 
 <h2>OPTIONS
 <a name="OPTIONS"></a>
@@ -229,7 +233,7 @@ internal authentication tokens</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(8)</b></p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(7),</b>cloudprintd(8),<b>cloudprint(1)</b></p>
 <hr>
 </body>
 </html>
