ppa.html: Use https to get the key

--- a/ppa.html
+++ b/ppa.html
@@ -39,7 +39,7 @@ deb http://davesteele.github.io/cloudprint-service/repo cloudprintppa main
 </pre>
 Add the repository key to your apt key ring:<br><br>
 <pre>
-# wget http://davesteele.github.io/key-366150CE.pub.txt
+# wget https://davesteele.github.io/key-366150CE.pub.txt
 # sudo apt-key add key-366150CE.pub.txt
 </pre>
 Install the packages with :<br><br>
