--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Apr 18 20:21:47 2015 -->
+<!-- CreationDate: Sun May 31 10:48:34 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -43,27 +43,16 @@
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em">service
-<b>cloudprintd</b> <i>login</i></p>
-
-<p style="margin-left:22%;">Establish login credentials
-with Cloud Print, then immediately exit. This will prompt
-for a username and password, if necessary. If the account
-has two-factor authentication enabled, then an
-application-specific password must be used. This and all
-other <b>cloudprintd</b> service commands must be run as
-root.</p>
-
-<p style="margin-left:11%;">service <b>cloudprintd</b>
-<i>start</i></p>
+<p style="margin-left:11%; margin-top: 1em">systemctl
+<i>start</i> <b>cloudprintd.service</b></p>
 
 <p style="margin-left:22%;">Start the <b>cloudprintd</b>
 service. This will fail if the credentials have not been
 established. The service will normally start automatically
 when the computer is running.</p>
 
-<p style="margin-left:11%;">service <b>cloudprintd</b>
-<i>stop</i></p>
+<p style="margin-left:11%;">systemctl <i>stop</i>
+<b>cloudprintd.service</b></p>
 
 <p style="margin-left:22%;">Stop the <b>cloudprintd</b>
 service. Login credentials are not lost. Normally, the
@@ -71,20 +60,11 @@ printer will continue to be shown as a valid destination.
 Any jobs spooled during that time will print when the
 service is restarted.</p>
 
-<p style="margin-left:11%;">service <b>cloudprintd</b>
-<i>status</i></p>
+<p style="margin-left:11%;">systemctl <i>status</i>
+<b>cloudprintd.service</b></p>
 
 <p style="margin-left:22%;">Determine whether the service
 is running or not.</p>
-
-<p style="margin-left:11%;">service <b>cloudprintd</b>
-<i>logout</i></p>
-
-<p style="margin-left:22%;">Delete the login credentials
-such that the service cannot be restarted without another
-&rsquo;login&rsquo;.</p>
-
-<p style="margin-left:11%; margin-top: 1em">(...)</p>
 
 <h2>DESCRIPTION
 <a name="DESCRIPTION"></a>
@@ -102,6 +82,11 @@ recommended that a dedicated account be used for this
 service. Printers can be shared from that account to others
 via the printer management page at
 <i>https://www.google.com/cloudprint?#printers</i></p>
+
+<p style="margin-left:11%; margin-top: 1em">Authentication
+credentials can be established using the sudo-wrapper script
+<b>cps-auth</b>, or from a remote computer using
+<b>cloudprint-auth</b>.</p>
 
 <h2>FILES
 <a name="FILES"></a>
@@ -121,7 +106,7 @@ details.</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8),<b>cps-auth(1),</b>cloudprint-auth(1)</p>
 <hr>
 </body>
 </html>
