--- a/man/cloudprint.html
+++ b/man/cloudprint.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Apr 18 20:21:47 2015 -->
+<!-- CreationDate: Sun May 31 10:48:34 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -151,6 +151,12 @@ time cloudprint is run.</p></td></tr>
 <p style="margin-left:22%;">path to PID file in daemon mode
 (default <i>cloudprint.pid</i>).</p>
 
+<p style="margin-left:11%;"><b>&minus;u</b> <i>&lt;user
+name&gt;</i></p>
+
+<p style="margin-left:22%;">the Google service user name to
+use if authentication is needed.</p>
+
 <table width="100%" border="0" rules="none" frame="void"
        cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
@@ -158,24 +164,14 @@ time cloudprint is run.</p></td></tr>
 <td width="3%">
 
 
-<p><b>&minus;u</b></p></td>
-<td width="8%"></td>
-<td width="78%">
-
-
-<p>store username/password in addition to login token to
-avoid authentication expiration.</p></td></tr>
-<tr valign="top" align="left">
-<td width="11%"></td>
-<td width="3%">
-
-
 <p><b>&minus;v</b></p></td>
 <td width="8%"></td>
-<td width="78%">
+<td width="24%">
 
 
-<p>verbose logging.</p></td></tr>
+<p>verbose logging.</p></td>
+<td width="54%">
+</td></tr>
 </table>
 
 <p style="margin-left:11%;"><b>&minus;x</b>
@@ -233,7 +229,7 @@ internal authentication tokens</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(7),</b>cloudprintd(8),<b>cloudprint(1)</b></p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(7),</b>cloudprintd(8),<b>cloudprint(1),</b>cps-auth(1)</p>
 <hr>
 </body>
 </html>
