--- a/man/cps-auth.html
+++ b/man/cps-auth.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sun May 31 10:48:34 2015 -->
+<!-- CreationDate: Wed Jun  3 20:53:01 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -43,7 +43,8 @@ cloudprint-service</p>
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>-auth</b>
+
+<p style="margin-left:11%; margin-top: 1em"><b>cps-auth</b>
 [<i>&lt;user name&gt;</i>]</p>
 
 <h2>DESCRIPTION
@@ -61,7 +62,7 @@ and then store the credentials locally for
 <p style="margin-left:11%; margin-top: 1em">See
 <b>cloudprint-auth</b> for an alternative mechanism, if a
 graphical desktop is not available on the
-/fBcloudprint-service server.</p>
+<b>cloudprint-service</b> server.</p>
 
 <h2>FILES
 <a name="FILES"></a>
@@ -79,7 +80,8 @@ graphical desktop is not available on the
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(7),</b>cloudprintd(8),<b>cloudprint(1),</b>cps-auth(1),<b>cloudprint-auth(1)</b></p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint-service(7),</b>cloudprintd(8),<b>cloudprint(1),</b>
+cps-auth(1), cloudprint-auth(1)</p>
 <hr>
 </body>
 </html>
