Update changelog URL away from PPA

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <li><a href="man/cloudprint.html">cloudprint man page</a> (<a href="man/cloudprint.pdf">pdf</a>)</li>
 <li><a href="man/cloudprint-auth.html">cloudprint-auth man page</a> (<a href="man/cloudprint-auth.pdf">pdf</a>)</li>
 <li><a href="man/cps-auth.html">cps-auth man page</a> (<a href="man/cps-auth.pdf">pdf</a>)</li>
-<li><a href="https://raw.github.com/davesteele/cloudprint-service/ppa/debian/changelog">cloudprint-service changelog</a></li>
+<li><a href="https://raw.githubusercontent.com/davesteele/cloudprint-service/master/debian/changelog">cloudprint-service changelog</a></li>
 </ul>
 <h3>Download</h3>
 <ul>
