--- a/man/cloudprint-auth.html
+++ b/man/cloudprint-auth.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Wed Jun  3 21:56:16 2015 -->
+<!-- CreationDate: Sat Jun  6 09:27:27 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -55,10 +55,10 @@ cloudprint-service</p>
 <p style="margin-left:11%; margin-top: 1em">The
 <b>cloudprint-auth</b> performs the OAuth2 authentication
 for <b>cloudprint</b> or <b>cloudprint-service</b>, and
-outputs the credentials to stdout, in the format for the
-cloudprint authentication file. It is intended for remote
-use when the <b>cloudprint-service</b> server does not have
-a graphical environment.</p>
+outputs the credentials to stdout, in the three-line format
+for the cloudprint authentication file. It is intended for
+remote use when the <b>cloudprint-service</b> server does
+not have a graphical environment.</p>
 
 
 <p style="margin-left:11%; margin-top: 1em"><b>cloudprint</b>
