--- a/man/cps-auth.html
+++ b/man/cps-auth.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Wed Jun  3 21:56:16 2015 -->
+<!-- CreationDate: Sat Jun  6 09:27:27 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -56,8 +56,8 @@ cloudprint-service</p>
 <b>cps-auth</b> provide a sudo wrapper for entering the
 required OAuth2 credentials for <b>cloudprint-service</b>.
 It will launch a browser window to complete the transaction,
-and then store the credentials locally for
-<b>cloudprint-service</b>.</p>
+request a code from the browser session, and then store the
+credentials locally for <b>cloudprint-service</b>.</p>
 
 <p style="margin-left:11%; margin-top: 1em">See
 <b>cloudprint-auth</b> for an alternative mechanism, if a
