--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Jun  6 09:27:26 2015 -->
+<!-- CreationDate: Sun Jul  5 13:01:07 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -84,9 +84,8 @@ via the printer management page at
 <i>https://www.google.com/cloudprint?#printers</i></p>
 
 <p style="margin-left:11%; margin-top: 1em">Authentication
-credentials can be established using the sudo-wrapper script
-<b>cps-auth</b>, or from a remote computer using
-<b>cloudprint-auth</b>.</p>
+credentials can be established using the wrapper script
+<b>cps-auth</b>.</p>
 
 <h2>FILES
 <a name="FILES"></a>
@@ -106,7 +105,7 @@ details.</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8),<b>cps-auth(1),</b>cloudprint-auth(1)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8),<b>cps-auth(1)</b></p>
 <hr>
 </body>
 </html>
