Update web site/repo for 0.14-1

--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Jul 11 01:35:31 2015 -->
+<!-- CreationDate: Mon Sep 21 21:18:29 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -105,7 +105,7 @@ details.</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cloudprintd(8),<b>cps-auth(1)</b></p>
+<p style="margin-left:11%; margin-top: 1em"><b>cloudprint(1),</b>cps-auth(1)</p>
 <hr>
 </body>
 </html>
