--- a/man/cloudprint-service.html
+++ b/man/cloudprint-service.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Mon Sep 21 21:18:29 2015 -->
+<!-- CreationDate: Sun Sep 27 01:43:18 2015 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -98,6 +98,12 @@ credentials can be established using the wrapper script
 <p style="margin-left:22%;">This file contains a number of
 parameters that control cloudprint. View the file for more
 details.</p>
+
+<p style="margin-left:11%;"><i>/etc/cloudprint.conf</i>,
+<i>~/.cloudprint.conf</i></p>
+
+<p style="margin-left:22%;">Can contain additional command
+line parameters for <b>cloudprint</b>.</p>
 
 <h2>SEE ALSO
 <a name="SEE ALSO"></a>
