Document limitiations of 0.14 installation
Don't try this on Jessie.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_pkgs}}
 </script>
+<li>Targetting Debian Testing and Sid (requires systemd, and python-daemon >= 2.0)</li>
+<ul>
 <div id="deblist"></div>
+</ul>
 <li><a href="archive.html">Package Archive</a></li>
 </ul>
 <h3>Support/Feedback</h3>
