index.html: Another misspelling

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </ul>
 <li>Targetting Debian Stable/Jessie (doesn't require systemd, and python-daemon must be < 2.0)</li>
 <ul>
-<div id="debstablelist></div>
+<div id="debstablelist"></div>
 </ul>
 <li><a href="archive.html">Package Archive</a></li>
 </ul>
