index.html: Misspelled targeting

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_stable}}
 </script>
-<li>Targetting Debian Testing and Sid (requires systemd, and python-daemon >= 2.0)</li>
+<li>Targeting Debian Testing and Sid (requires systemd, and python-daemon >= 2.0)</li>
 <ul>
 <div id="deblist"></div>
 </ul>
-<li>Targetting Debian Stable/Jessie (doesn't require systemd, and python-daemon must be < 2.0)</li>
+<li>Targeting Debian Stable/Jessie (doesn't require systemd, and python-daemon must be < 2.0)</li>
 <ul>
 <div id="debstablelist"></div>
 </ul>
